[gd_scene load_steps=4 format=3 uid="uid://dxipnmet5maoy"]

[ext_resource type="Theme" uid="uid://m03cgcejchws" path="res://src/elements/ui/style/font_theme.tres" id="1_52bkx"]
[ext_resource type="Script" uid="uid://dc51x8uvcq165" path="res://src/elements/ui/menus/main_menu.gd" id="1_ql1cf"]
[ext_resource type="Script" uid="uid://cnld5vsyaf5i6" path="res://src/elements/ui/style/appliers/button_group.gd" id="3_fonus"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_52bkx")
script = ExtResource("1_ql1cf")

[node name="Buttons" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -33.0
offset_right = 46.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_fonus")

[node name="ContainersButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "containers"

[node name="PlatformsButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "platforms"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "quit"

[connection signal="pressed" from="Buttons/ContainersButton" to="." method="_on_containers_button_pressed"]
[connection signal="pressed" from="Buttons/PlatformsButton" to="." method="_on_platforms_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
